--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
             "dev-master": "3.x-dev"
         },
         "symfony": {
-            "require": "5.0.*"
+            "require": "4.4.*|5.0.*"
         }
     }
 }
